 ** IMPORTANT: Existing DogTags that reference other icons/groups by ID cannot be updated automatically - you will need to change these yourself.


 * The duration of Diminishing Returns is now customizable in TMW's main options.
 * You can now right-click-and-drag the group resize handle to easily change the number of rows and columns of a group.
 * Added group settings that allow you to specify when a group should be shown based on the role that your current specialization fulfills.
 * You can now enter "none" or "blank" as a custom texture for an icon to force it to display no texture.
 * New Condition: Specialization Role
 * The Buff/Debuff - "Number of" conditions now accept semicolon-delimited lists of multiple auras that should be counted.

 * Exporting a meta icon will also export the string(s) of its component icons.
 * Exporting groups and icons will also export the string(s) of their text layouts.

 * Various updates to many buff/debuff equivalencies.
 * New buff equivalency: SpeedBoosts

 * In the wake of the recent distribution of malicious scripts to WeakAuras users, TellMeWhen now warns you about importing executable Lua code.
 * Dramatically decreased memory usage, especially for icons that have no icon type assigned.
 * Code snippets can now be disabled from autorunning at login.
 * You can now use "thisobj" in Lua conditions as a reference to the icon or group that is checking the conditions.
 
 * Bug Fixes:
 ** Units tracked by name with spaces in them (E.g. Kor'kron Warbringer as a CLEU unit filter) will now be interpreted properly as input.
 *** IMPORTANT: A consequence of this fix is that if you are enter a unit like "boss 1", this will no longer work. You need to enter "boss1", which has always been the proper unitID.
 ** Importing/Exporting icons from/to strings with hyperlinks in some part of the icon's data will now preserve the hyperlink.